<resources>
    <string name="app_name">FoodCraft</string>
    <string name="action_settings">Settings</string>
    <string name="breakfast_cuisine">Breakfast</string>
    <string name="lunch_cuisine">Lunch</string>
    <string name="dinner_cuisine">Dinner"</string>
    <string name="appetizer_cuisine">Appetizers</string>
    <string name="beverage_cuisine">Beverages</string>
    <string name="dessert_cuisine">Desserts</string>
    <string name="bread_cuisine">Breads</string>
    <string name="salad_cuisine">Salads</string>
    <string name="upc_scanner">Scan a UPC code</string>
    <string name="upc_scanner_fragment">Scan a UPC code via Fragment</string>
    <string name="database_backend">Use the database</string>
    <string name="search_frontend">Use the search frontend</string>
    <string name="googlemaps_api">Use Google Maps</string>
    <string name="bigoven_api">Search an ingredient in BigOven </string>
    <string name="yummly_api">Search an ingredient in Yummly </string>
    <string name="title_activity_ingredient_search">IngredientSearch</string>
    <string name="app_label">IngredientSearch</string>
    <string name="search_hint">Search Ingredients</string>
    <string name="search">Search</string>
    <string name="main_title">Recipe Results</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locationMessage">Locations services are not enabled. Would you like to enable them now?</string>
    <string name="mainPage">The EULA has been accepted and this space is reserved for the main homepage.</string>
    <string name="updates">Updates in this version: Improved User Interface. </string>
    <string name="eulaTitle">End User License Agreement</string>
    <string name="eula"> Copyright 2015 FootCraft. All Rights Reserved.

\n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
format, or by any other form or means without prior consent, in writing, from FoodCraft.

\n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
with the terms of that license, which is described in the following paragraphs.

\n\nTRADEMARKS:
\n\n[Software logos, icons, etc that are Trademarked]

\n\nLICENSE:
\n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
purchaser of the software.

\n\nBuyer has the non-exclusive right to the use of software only on a single device. Buyer may not electronically
transfer the program from one device to another over any type of network. Buyer may not distribute copies
of the software or the accompanying documentation to others either for a fee or without charge. Buyer may not modify
or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
and erase the software from any and all storage devices upon which it may have been installed.

\n\nThis license agreement shall be governed by the laws of The United States of America, California and
shall inure to the benefit of FootCraft or its assigns.

\n\nDISCLAIMER / LIMITATION OF LIABILITY:
\n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
needs. FoodCraft warrants all media on which the software is distributed for 60 days to be free from defects
in normal use. The software and any accompanying written materials are licensed \"AS IS\". Buyer\'s exclusive
remedy during the warranty period (if any) shall consist of replacement of distribution media if determined to be
faulty. In no event will Foodcraft be liable for direct, indirect, incidental or consequential damage or
damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
exclusion may not apply.

\n\nSPECIFIC RESTRICTIONS:
\n\nIn accordance with the COMPUTER SOFTWARE RENTAL ACT OF 1990, this software may not be rented, lent or leased.
\n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
which does not provide an original package as composed of FoodCraft, including but not limited to all original
distribution media, documentation, registration cards, and insertions.</string>
    <string name="title_activity_yummly_search" >YummlySearchActivity</string>
    <string name="title_activity_temp_result">TempResultActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_sharedpreferences">activity_sharedpreferences</string>
    <string name="title_activity_shared_preferences">SharedPreferences</string>
    <string name="title_activity_view_recipe">ViewRecipe</string>
</resources>
