<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="sfsu.csc413.foodcraft.ResultsListActivity">
    <item android:id="@+id/action_breakfast"
        android:title="@string/breakfast_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_lunch"
        android:title="@string/lunch_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_appetizer"
        android:title="@string/appetizer_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_maindishes"
        android:title="Main Dishes"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_breads"
        android:title="@string/bread_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_salads"
        android:title="@string/salad_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_dessert"
        android:title="@string/dessert_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_beverage"
        android:title="@string/beverage_cuisine"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
